[build-system]
requires = ["setuptools>=71.0.0", "setuptools-scm>=8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "thrember"
version = "0.1.0"
description = "EMBER feature version 3"
readme = "README.md"
requires-python = ">=3.12.10,<3.13"
dependencies = [
    "lightgbm==4.6.0",
    "pefile==2024.8.26",
    "polars==1.37.1",
    "scikit-learn==1.8.0",
    "tqdm==4.67.2",
    "signify==0.9.2",
    "huggingface_hub==1.3.7",
    "matplotlib==3.10.8",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thrember = ["*.txt"]