[metadata]
name = thrember
version = 0.1.0
description = EMBER feature version 3

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.12.10,<3.13
install_requires =
    lightgbm==4.6.0
    pefile==2024.8.26
    polars==1.37.1
    scikit-learn==1.8.0
    tqdm==4.67.2
    signify==0.9.2
    huggingface_hub==1.3.7
    matplotlib==3.10.8

[options.package_data]
thrember = *.txt

[options.packages.find]
where = src